Added timing, introduced var, and reduced scope where possible, minor code enhancements. Also fixed issue in the input-file where "()"" was somehow entered in the data during a previous change. This made the solution fail.