@@ -2,20 +2,18 @@ package com.putoet.day18;
 
 import com.putoet.grid.Point;
 import org.javatuples.Pair;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-import static com.putoet.search.GenericSearch.Node;
-
-public class MultiMapExplorer {
+class MultiMapExplorer {
     private final KeyMap[] keyMaps;
     private final Set<Character> allKeys;
 
     private final PriorityQueue<State> queue;
     private final Map<String, Integer> shortest = new HashMap<>();
-
 
     private MultiMapExplorer(KeyMap[] keyMaps) {
         assert keyMaps != null && keyMaps.length > 0;
@@ -28,7 +26,7 @@ public class MultiMapExplorer {
         this.queue = new PriorityQueue<>(Comparator.comparingInt(state -> state.steps));
     }
 
-    public static int collectAllKeys(KeyMap[] keyMaps) {
+    public static int collectAllKeys(@NotNull KeyMap[] keyMaps) {
         final MultiMapExplorer explorer = new MultiMapExplorer(keyMaps);
         return explorer.collectAllKeys();
     }
@@ -37,12 +35,12 @@ public class MultiMapExplorer {
         queue.clear();
         shortest.clear();
 
-        final State initialState =
+        final var initialState =
                 new State(Arrays.stream(keyMaps).map(KeyMap::entrance).collect(Collectors.toList()));
         queue.offer(initialState);
 
-        State current = queue.poll();
-        while (current != null && !foundAll(current)) {
+        var current = queue.poll();
+        while (!foundAll(Objects.requireNonNull(current))) {
             addAvailableKeys(queue, current);
             current = queue.poll();
         }
@@ -51,26 +49,25 @@ public class MultiMapExplorer {
     }
 
     private void addAvailableKeys(PriorityQueue<State> queue, final State current) {
-        final List<Pair<Integer, List<Node<Point>>>> availableKeys =
-                IntStream.range(0, keyMaps.length)
+        final var availableKeys = IntStream.range(0, keyMaps.length)
                         .mapToObj(i -> new Pair<>(i, keyMaps[i].availableKeys(current.locations.get(i), current.keys)))
-                        .collect(Collectors.toList());
+                        .toList();
 
         availableKeys.forEach(pair -> {
-            final int id = pair.getValue0();
+            final var id = pair.getValue0();
 
             pair.getValue1().forEach(node -> {
-                final List<Point> nextLocations = new ArrayList<>(current.locations);
+                final var nextLocations = new ArrayList<>(current.locations);
                 nextLocations.set(id, node.state);
 
-                final Set<Character> nextKeys = new HashSet<>(current.keys);
+                final var nextKeys = new HashSet<>(current.keys);
                 nextKeys.add(elementAt(node.state));
 
-                final int nextSteps = current.steps + node.steps();
+                final var nextSteps = current.steps + node.steps();
 
-                final String mapKey = nextLocations.toString() + nextKeys.toString();
+                final var mapKey = nextLocations + nextKeys.toString();
                 if (!shortest.containsKey(mapKey) || shortest.get(mapKey) > nextSteps) {
-                    final State next = new State(nextLocations, nextKeys, nextSteps);
+                    final var next = new State(nextLocations, nextKeys, nextSteps);
                     shortest.put(mapKey, nextSteps);
                     queue.offer(next);
                 }
@@ -79,7 +76,7 @@ public class MultiMapExplorer {
     }
 
     private Character elementAt(Point point) {
-        for (KeyMap keyMap : keyMaps) {
+        for (var keyMap : keyMaps) {
             if (keyMap.contains(point))
                 return keyMap.elementAt(point);
         }
@@ -87,25 +84,13 @@ public class MultiMapExplorer {
         throw new IllegalStateException("Point " + point + " not on any of the key maps");
     }
 
-    public boolean foundAll(State state) {
+    public boolean foundAll(@NotNull State state) {
         return allKeys.equals(state.keys);
     }
 
-    public static class State {
-        public final List<Point> locations;
-        public final Set<Character> keys;
-        public final int steps;
-
-        public State(List<Point> locations, Set<Character> keys, int steps) {
-            this.locations = locations;
-            this.keys = keys;
-            this.steps = steps;
-        }
-
-        public State(List<Point> locations) {
-            this.locations = locations;
-            this.keys = Set.of();
-            this.steps = 0;
+    public record State(@NotNull List<Point> locations, @NotNull Set<Character> keys, int steps) {
+        public State(@NotNull List<Point> locations) {
+            this(locations, Set.of(), 0);
         }
     }
 }
